# percy-example-app

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.md  README.md  bootstrap.sh  build.release.sh  clean.sh  run.debug.sh  run.release.sh  start.sh  ubuntu.sh
app/: Cargo.toml
app/src/: lib.rs  routes.rs  store.rs
app/src/actions/: job_actions.rs  mod.rs
app/src/api/: endpoints.rs  fetch.rs  graphql.rs  mod.rs  models.rs  request.rs  schema.rs
app/src/state/: mod.rs  msg.rs
app/src/views/: contractors_view.rs  home_view.rs  management_view.rs  mod.rs  report_view.rs
app/src/views/nav_bar_view/: mod.rs  nav_bar_item_view.rs
client/: Cargo.toml  build-wasm.prod.sh  build-wasm.sh
client/src/: lib.rs
graphql/: createJob.gql  createJob.json  job_query.graphql  job_schema.graphql
scripts/: fullstackrust-percy.service  innotrade.service  run.debug.sh  test.sh  ubuntu.sh
server/: Cargo.toml
server/src/: db.rs  index.html  lib.rs  main.rs  model.rs  schema.rs  server.rs
tests/: Cargo.toml
tests/src/: lib.rs
