[package]
name = "isomorphic-app"
version = "0.1.0"
publish = false
edition = "2018"

[features]
logging = []

[dependencies]
virtual-dom-rs = "0.6.12"
css-rs-macro = "0.1.0"
router-rs = "0.2.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.45"
wasm-bindgen = { version = "0.2.58", features = ["serde-serialize"] }
js-sys = "0.3.35"
futures = "0.3.1"
wasm-bindgen-futures = "0.4.8"
graphql_client = "0.8.0"
failure = "0.1.6"
log = "0.4.8"
graphql_client_web = "0.8.0"

[dependencies.web-sys]
version = "0.3"
features = [
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Window',
    "Event",
    "HtmlInputElement",
]

[profile.release]
lto = true
