[package]
name = "fullstackrust-percy-app"
version = "0.1.0"
publish = false
edition = "2018"

[features]
logging = []

[dependencies]
virtual-dom-rs = "0.6.14"
css-rs-macro = "0.1.0"
router-rs = "0.2.1"
serde = { version = "1", features = ["rc", "derive"] }
serde_json = "1"
futures = "0.3.8"
graphql_client = { git = "https://github.com/graphql-rust/graphql-client", rev = "9160417f9cdadf84e47bf0a0c888e9f1f9cd537a", features = [
  "web"
] }
failure = "0.1.8"
log = "0.4.11"
js-sys = "0.3.45"
wasm-bindgen = { version = "0.2.68", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.18"

[dependencies.web-sys]
version = "0.3.45"
features = [
  "Headers",
  "Request",
  "RequestInit",
  "Response",
  "Window",
  "console"
]

[profile.release]
lto = true
