[package]
name = "fullstackrust-percy-client"
version = "0.1.0"
publish = false
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1"
fullstackrust-percy-app = { path = "../app", features = ["logging"] }
virtual-dom-rs = "0.6.14"

[dependencies.wasm-bindgen]
version = "0.2.68"
features = ["default", "nightly"]

[dependencies.web-sys]
version = "0.3.45"
features = [
    "console",
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "History",
    "HtmlCollection",
    "Location",
    "Node",
    "NodeList",
    "Text",
    "Window",
]
