[package]
name = "isomorphic-server"
version = "0.1.0"
publish = false
edition = "2018"

[dependencies]
virtual-dom-rs = { path = "../percy/crates/virtual-dom-rs" }
isomorphic-app = { path = "../app" }
actix-web = "0.7.18"
futures = "0.1.25"
env_logger = "0.6.1"
pretty_env_logger = "0.3.0"
log = "0.4.6"
warp = "0.1.14"
juniper = "0.11.1"
juniper_warp = "0.2.0"
sled = "0.20.0"
dirs = "1.0.5"
serde = "1.0.89"
serde_derive = "1.0.89"
serde_bytes = "0.10.5"
bytevec = "0.2.0"
ulid = "0.3.1"
chrono = { version = "0.4.6", features = ["serde"] }
