[package]
name = "fullstackrust-percy-server"
version = "0.1.0"
publish = false
edition = "2018"

[dependencies]
virtual-dom-rs = "0.6.12"
fullstackrust-percy-app = { path = "../app" }
actix-web = "2.0.0"
futures = "0.3.1"
env_logger = "0.7.1"
pretty_env_logger = "0.4.0"
log = "0.4.8"
warp = "0.2.1"
juniper = "0.14.2"
juniper_warp = "0.5.2"
sled = "0.31.0"
dirs = "2.0.2"
serde = { version = "1.0.104", features = ["derive"] }
serde_bytes = "0.11.3"
bytevec = "0.2.0"
ulid = "0.3.1"
chrono = { version = "0.4.10", features = ["serde"] }
